style.css
:root{
    --version: "v1.12.1";
    --input-back: #92899566;
    --dark: #11091a;

    --font-color: #eee;
    --primary: #301E67;
    --primaryDark: #03001C;
    --brighter: #B6EADA;
    --exit: #5B8FB9;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    color: var(--font-color);
    background-image: linear-gradient(to bottom right, var(--primary) 10%, var(--brighter));
    background-attachment: fixed;
    /* background-color: var(--primary); */
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}

a{
    color: var(--font-color);
    text-decoration: underline;
}
a:hover{
    color: var(--brighter);
}

header nav{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    text-align: left;
    padding:1rem;
    font-size: 3rem;
    background-color: var(--primaryDark);    
    box-shadow: 0 1px 7px var(--dark);
}

header nav div{
    display: flex;
    align-items: flex-start;
    font-size: 2.6rem;
}

header nav div a{
    align-self: center;
}

header nav div a img{
    filter: invert(0);
    width: 4.2rem;
}

header nav div a img:hover{
    opacity: 1;
}

header nav a img{
    width: 2.5rem;
    filter: invert(1);
    margin: .5rem;
}
header nav a img:hover{
    opacity: .8;
    cursor: pointer;
}


#form{
    display: flex;
    margin-top: 2rem;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    gap: 1rem;
}

#form a{
    font-size: 1rem;
}

#form input[type="submit"],
.modal input[type="submit"]{
    font-size: 1.4rem;
    padding: .7rem;
    border-radius: 30px;
    background-color: var(--brighter);
    color: var(--dark);
    border: none;
    box-shadow: 1px 1px 5px var(--dark);
    width: fit-content;
}

#form input[type="submit"]:hover,
.modal input[type="submit"]:hover{
    box-shadow:inset 0 0 10px var(--primaryDark), 0 2px 4px var(--dark);
    cursor: pointer;
    /* color: var(--brighter); */
}

.modal{
    width: fit-content;
    margin: auto auto;
    padding: 2rem;
    background-color: var(--primaryDark);
    outline: none;
    border: none;
    box-shadow: 0 0 10px var(--exit);
    border-radius: 25px;
}

/*scrollbar*/
/* width */
::-webkit-scrollbar {
    width: 10px;
}
/* Track */
::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 1rem;
    margin-top: 60px;
    margin-bottom: 60px;
}
/* Handle */
::-webkit-scrollbar-thumb {
    background: var(--primaryDark);
    border-radius: 1rem;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #1f1f3abb;
}

.modal h2,
form h2{
    text-align: center;
    text-shadow: 1px 1px 5px var(--dark);
    color: var(--font-color);
    font-size: 2rem;
    margin-bottom: 1rem;
}
.modal h2::after{
    content: " ";
    display: block;
    height: 1px;
    width: 50%;
    background-color: var(--dark);
    margin: 1rem auto;
    opacity: .6;
}

.modal::backdrop{
    backdrop-filter: blur(30px);
}
.modal form{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    padding: 1rem;
}


input{
    color: var(--font-color);
    text-shadow: 0 2px 5px var(--dark);
    border: none;
    padding: 5px;
    border-bottom: 4px solid var(--brighter);
    background-color: var(--input-back);
    box-shadow: 0 2px 4px var(--dark);
    width: 400px;
    font-size: 1.1rem;
}
input:focus{
    outline: none;
    box-shadow: inset 0 0 10px var(--brighter),
        0 0 7px var(--brighter);
    
}
input::placeholder{
    color: var(--font-color);
    opacity: .5;
}

form label{
    color: var(--font-color);
    font-size: 1.4rem;
    text-shadow: 1px 1px 5px var(--dark);

}


#dialog-alert{
    text-align: center;
    padding: 2rem;
    margin: auto;
    width: 600px;
    height: fit-content;
}

#dialog-alert h2{
    font-size: 1.4rem;
    text-decoration: none;
    text-shadow: 1px 1px 5px var(--dark);

}

#dialog-alert div{
    margin-top: 1rem;
    color: var(--font-color);
    font-size: 1rem;
    font-weight: bold;
    text-shadow: 1px 1px 5px var(--dark);
}

.modal .exit{
    width: 2.3rem;
    height: 2.3rem;
    border: none;
    border-radius: 50%;
    background-color: var(--exit);
    box-shadow: inset 0 0 7px var(--dark);
    color: var(--dark);
    font-weight: bolder;
    position: absolute;
    top: 7px;
    right: 7px;
    font-size: 1rem;
}
.modal .exit:hover,
.modal .exit:active{
    box-shadow: inset 0 0 10px var(--dark), 0 2px 5px var(--dark);
    cursor: pointer;
}

footer{
    text-align: center;
    position: absolute;
    bottom: 7px;
    left: 7px;
    font-size: .7rem;
}

footer h4::after{
    content: var(--version);
}

aside{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 2rem;
    margin-top: 2rem;
}
aside .dark-mode{
    transition: box-shadow .2s;
    position: absolute;
    bottom: 1rem;
    right: 1rem;
    width: 3rem;
    height: 3rem;
    border: none;
    border-radius: 100%;
    background-color: var(--primaryDark);
    color: var(--font-color);
    text-shadow: 0 1px 4px var(--dark);
    font-size: .9rem;
    font-weight: bold;
    margin-left: 2rem;
    box-shadow:  0 0 25px var(--dark);
}

aside #btn-theme:hover{
    cursor: pointer;
    opacity: .8;
    box-shadow: 0 0 15px var(--dark),
    inset 0 0 25px black;
}
button:active,
input[type="submit"]:active{
    transform: scale(0.95);

}
aside button img{
    width: 3rem;
}

/* Lo basico para que no se rompa en mobile */
@media screen and (max-width: 600px) {
    .modal,
    .modal form input,
    #form input{
        width: 100%;
    }
}

