Final dark mode fix

--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all .3s;
 }
 
 body{
     color: var(--font-color);
     background-image: linear-gradient(to bottom right, var(--primary) 10%, var(--brighter));
     background-attachment: fixed;
-    /* background-color: var(--primary); */
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -52,6 +52,11 @@ header nav div{
 
 header nav div a{
     align-self: center;
+}
+
+header nav div h1{
+    transition: all .3s;
+    color: var(--font-color);
 }
 
 header nav div a img{
@@ -264,10 +269,9 @@ aside{
     margin-top: 2rem;
 }
 aside .dark-mode{
-    transition: box-shadow .2s;
     position: absolute;
-    bottom: 1rem;
-    right: 1rem;
+    bottom: 2rem;
+    right: 2rem;
     width: 3rem;
     height: 3rem;
     border: none;
